tests/should_succeed/global_bug.jou
# Previously this segfaulted the compiler.
declare global stdout: byte*
declare fputs(s: byte*, file: byte*) -> int

def main() -> int:
    # TODO: doesn't work
    #fputs("Hello World\n", stdout)
    return 0
