tests/syntax_error/keyword_uint16.jou
def main() -> int:
    uint16 = 1  # Error: expected an expression, got the 'uint16' keyword
    return 0
